# note-converter

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
data/keep-notes/: example-dream.json
data/noto/: Noto.example.json
src/: main.rs  note.rs
src/keep-notes/: example-dream.json
src/note/: keep.rs  noto.rs
