[package]
name = "dream-log-converter"
version = "0.1.0"
edition = "2021"
description = "A tool for migrating Google Keep notes to Noto."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = "0.8.1"