[package]
name = "dream-log-converter"
version = "0.1.0"
edition = "2021"
description = "A tool for converting notes between different formats."

[dependencies]
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
chrono = { version = "0.4.23", features = ["serde"] }
dialoguer = "0.10.4"
